# DetectionViolationsLandfills

./: .gitignore  README.md  packages.txt  pyproject.toml  Документация_по_ГОСТ.docx
app/: main.py  packages.txt  pyproject.toml  utils.py
data_csv/: polygons.csv
gptapp/: main.py
main/research/: cut.ipynb
main/research/yolov8s_result12/: args.yaml  results.csv
main/web/: .gitignore  multiapp.py  redirect.py  system.py  utils.py
main/web/apps/: crop.py  label.py  login.py  pano.py  yolo.py
main/web/data_csv/: aero.csv
notebooks/: app.py  database.py  main.py  parsing.ipynb  streamlit.ipynb  yolo.py
research/: train_only.py  yolov8.ipynb
research/yolov8s_result12/: events.out.tfevents.1685300720.a17874b2105a.23.4
scripts/: cropping.ipynb
web/: deploy.py  merge.py  redirect.py  system.py  utils.py
web/apps/: crop.py  drone.py  label.py  login.py  map.py  predict.py  predict_old.py  yolo.py
yoloapp/: main.py  redirect.py  requirements.txt
