[tool.poetry]
name = "lct"
version = "0.1.0"
description = ""
authors = ["Rinat Sharafetdinov <rinat.sharafetdinov42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10,<3.9.7 || >3.9.7,<4.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
torch = "^2.0.1"
transformers = "^4.29.2"
psycopg2 = "^2.9.6"
config = "^0.5.1"
flask = "^2.3.2"
flask-restful = "^0.3.9"
fastapi = "^0.95.2"
spacy = "^3.5.3"
sqlalchemy = "^2.0.15"
scikit-learn = "^1.2.2"
folium = "^0.14.0"
openpyxl = "^3.1.2"
suntime = "^1.2.5"
ipykernel = "^6.23.1"
streamlit = "^1.22.0"
opencv-python = "^4.7.0.72"
wget = "^3.2"
selenium = "^4.9.1"
requests = "^2.31.0"
urllib3 = "^2.0.2"
pyopenssl = "^23.1.1"
streamlit-authenticator = "0.1.5"
deta = "^1.1.0"
plotly = "^5.14.1"
torchvision = "^0.15.2"
ultralytics = "^8.0.109"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
